# video-streaming

./: .gitignore  LICENSE  release.sh
.github/workflows/: publish-nuget.yml
src/: ModelingEvolution.VideoStreaming.sln
src/HailoProcessor/: Allocator.h  ArrayOperations.cpp  ArrayOperations.h  ArrayPool.h  CMakeLists.txt  Channel.hpp  Export.cpp  Export.h  Frame.cpp  Frame.h  FrameIdentifier.cpp  FrameIdentifier.h  HailoException.cpp  HailoException.h  HailoProcessor.cpp  HailoProcessor.h  HailoProcessor2.cpp  HailoProcessor2.h  HailoProcessorStats.cpp  HailoProcessorStats.h  HailoProcessorStatsDto.cpp  HailoProcessorStatsDto.h  Notifier.cpp  Notifier.h  OutTensor.h  Program.cpp  README.md  StageStats.cpp  StageStats.h  StopWatch.cpp  StopWatch.h  build.sh  cmake_install.cmake  common.cpp  common.h  double_buffer.hpp  get_sources.sh  rebuild.sh  yolov8seg_postprocess.hpp
src/HailoProcessor/common/: hailo_common.hpp  hailo_objects.hpp  hailo_tensors.hpp  math.hpp  nms.hpp  tensors.hpp
src/HailoProcessor/common/labels/: coco_eighty.hpp
src/LibHailoProcessor/: CMakeLists.txt
src/LibHailoProcessor/src/: Allocator.h  ArrayOperations.cpp  ArrayOperations.h  ArrayPool.h  CMakeLists.txt  Export.cpp  Export.h  Frame.cpp  Frame.h  HailoProcessor.cpp  HailoProcessor.h  LibHailoProcessor.cpp  LibHailoProcessor.h  OutTensor.h
src/LibHailoProcessor/tests/: ArrayOperationsTest.cpp  CMakeLists.txt  test_main.cpp
src/LibJpegWrap/: LibJpegWrap.cpp  LibJpegWrap.vcxproj  LibJpegWrap.vcxproj.filters  Makefile  install_pre.sh
src/ModelingEvolution,VideoStreaming.Yolo/: ArrayOperations.cs  Class1.cs  DenseTensorExtensions.cs  DenseTensorOwner.cs  Detection.cs  DetectionBoxesExtensions.cs  Ext.cs  Extensions.cs  HefOnnxModelRunner.cs  INonMaxSuppressionService.cs  IParser.cs  IRawBoundingBox.cs  IRawBoundingBoxParser.cs  IYoloModelRunner.cs  IYoloPrediction.cs  KeypointShape.cs  MemPoolExtensions.cs  ModelPerformance.cs  ModelingEvolution,VideoStreaming.Yolo.csproj  ModelingEvolution.VideoStreaming.Yolo.csproj  NonMaxSuppressionService.cs  RawBoundingBox.cs  RawBoundingBoxParser.cs  RawParsingContext.cs  RectangleExtensions.cs  Segmentation.cs  SegmentationParser.cs  SessionTensorInfo.cs  TensorPreprocessor.cs  TensorShape.cs  YoloArchitecture.cs  YoloConfiguration.cs  YoloMetadata.cs  YoloModel.cs  YoloModelFactory.cs  YoloModelRunner.cs  YoloName.cs  YoloPoseMetadata.cs  YoloPrediction.cs  YoloPredictorOptions.cs  (+3 more)
src/ModelingEvolution.LibJpegWrap.CmdTest/: ModelingEvolution.LibJpegWrap.CmdTest.csproj  Program.cs
src/ModelingEvolution.VideoStreaming.Buffers/: Class1.cs  CyclicArrayBuffer.cs  FrameMetadata.cs  ManagedArray.cs  ModelingEvolution.VideoStreaming.Buffers.csproj  SortedListDictionary.cs  StreamExtensions.cs
src/ModelingEvolution.VideoStreaming.CVat/: AttachTaskDataRequest.cs  CVatClient.cs  CVatFactory.cs  CVatModule.cs  CreateTaskRequest.cs  CvatTaskResponse.cs  ICVatClient.cs  Job.cs  Label.cs  LabelRequest.cs  ModelingEvolution.VideoStreaming.CVat.csproj  Storage.cs  TaskListResponse.cs  User.cs
src/ModelingEvolution.VideoStreaming.CameraSimulator/: ModelingEvolution.VideoStreaming.CameraSimulator.csproj  ModelingEvolution.VideoStreaming.CameraSimulator.sln  Program.cs
src/ModelingEvolution.VideoStreaming.Events/: ClientDisconnected.cs  ModelingEvolution.VideoStreaming.Events.csproj  MultiplexerStopped.cs  StreamingStarted.cs  StreamingStopped.cs  Streams.cs
src/ModelingEvolution.VideoStreaming.Hailo/: AnnotationResult.cs  HailoException.cs  HailoProcessor.cs  Lib.cs  ModelingEvolution.VideoStreaming.Hailo.csproj  TimeSpanExtensions.cs
src/ModelingEvolution.VideoStreaming.HailoCmd/: ModelingEvolution.VideoStreaming.HailoCmd.csproj  Program.cs
src/ModelingEvolution.VideoStreaming.LibJpegTurbo/: JpegEncoder.cs  JpegEncoderFactory.cs  ModelingEvolution.VideoStreaming.LibJpegTurbo.csproj
src/ModelingEvolution.VideoStreaming.Mp4ToMjpeg/: ModelingEvolution.VideoStreaming.Mp4ToMjpeg.csproj  ModelingEvolution.VideoStreaming.Mp4ToMjpeg.csproj.DotSettings  Program.cs
src/ModelingEvolution.VideoStreaming.Mp4ToYuv420/: ModelingEvolution.VideoStreaming.Mp4ToYuv420.csproj  Program.cs
src/ModelingEvolution.VideoStreaming.OpenVidCam/: ConfigurationExtensions.cs  Extensions.cs  FpsWatch.cs  ModelingEvolution.VideoStreaming.OpenVidCam.csproj  PeriodicConsoleWriter.cs  Program.cs  appsettings.json
src/ModelingEvolution.VideoStreaming.Player/: JpegFrame.cs  MjpegDecoder.cs  MjpegStream.cs  ModelingEvolution.VideoStreaming.Player.csproj  VideoStreamRenderer.cs
src/ModelingEvolution.VideoStreaming.Player.App/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  ModelingEvolution.VideoStreaming.Player.App.csproj
src/ModelingEvolution.VideoStreaming.Player.Wpf/: App.xaml  App.xaml.cs  FrameSurface.cs  MainWindow.xaml  MainWindow.xaml.cs  ModelingEvolution.VideoStreaming.Player.Wpf.csproj
src/ModelingEvolution.VideoStreaming.Sdk/: JpegFrame.cs  JpegMarker.cs  MjpegDecoder.cs  MjpegStream.cs  ModelingEvolution.VideoStreaming.Sdk.csproj
src/ModelingEvolution.VideoStreaming.Tests/: BitConverterTests.cs  ChaserTests.cs  ControlStream.cs  FrameInfoTests.cs  ManagedArrayTests.cs  MemoryAssertions.cs  MjpegStreamTests.cs  ModelingEvolution.VideoStreaming.Tests.csproj  SlidingBufferWriterTests.cs  StreamExtensions.cs  StreamMultiplexerTests.cs  StructMarshalTests.cs  UnitTest1.cs  VideoAddressTests.cs  YoloModelRunnerTests.cs
src/ModelingEvolution.VideoStreaming.Ui/: ContainerExtensions.cs  ModelingEvolution.VideoStreaming.Ui.csproj  SizeExtensions.cs  SpeedVm.cs  _Imports.razor
src/ModelingEvolution.VideoStreaming.VectorGraphics/: ArrayBuffer.cs  ContainerExtensions.cs  Draw.cs  DrawContext.cs  Extensions.cs  FrameWriterExtensions.cs  HsvColor.cs  ICanvas.cs  IRenderItem.cs  IRenderOp.cs  ISerializer.cs  ManagedArray.cs  MemoryBufferWriter.cs  (+16 more)
(+184 files in other folders)
